f bank internet portal tagline update

--- a/config.toml
+++ b/config.toml
@@ -239,9 +239,9 @@ googleAnalytics = "UA-XXXXXXX-Y"
 
         [[params.projects.list]]
         #title = "FCB New Enterprise Bank Portal "
-        title = "F Bank New Enterprise Bank Portal "
+        title = "F Bank New Internet Banking Portal"
         meta = "ITA & SA & SD"
-        tagline = "You can use this section for your side projects. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim."
+        tagline = "Upgrade and develop new cx portal with new look and feel, multi-lingo capability. Perform HA and Stress test to ensure robustness"
 
         [[params.projects.list]]
         #title = "Walsin eProcurement"
