--- a/config_en.toml
+++ b/config_en.toml
@@ -242,7 +242,7 @@ googleAnalytics = "UA-XXXXXXX-Y"
 
         [[params.projects.list]]
         #title = "FCB New Enterprise Bank Portal "
-        title = "F Bank New Enterprise Bank Portal "
+        title = "F Bank New Internet Banking Portal"
         meta = "ITA & SA & SD"
         tagline = "Upgrade and develop new cx portal with new look and feel, multi-lingo capability. Perform HA and Stress test to ensure robustness"
 
