--- a/config_en.toml
+++ b/config_en.toml
@@ -198,37 +198,35 @@ googleAnalytics = "UA-XXXXXXX-Y"
 
     [params.experience]
         enable = true
-
+        
         [[params.experience.list]]
         title = "IT Consultant"
         dates = "2000 - 2013"
         company = "IBM"
-        #details = "擔任專案系統架構技術主管/協助專案規畫書建議"
         details = "System architect and tech. lead/support engagement SoW/proposal"
+        
         [[params.experience.list.items]]
-        details = "Architect:    Design  architecture,  implement  solution  that  meet  FRs  and  NFRs.  Interfaces  b/w  applications/legacy  systems  should  also  be  well  considered,  designed  and  developed."
+        details = "Architect: Design architecture with Architecture Thinking, implement solution that meet FRs and NFRs. Interfaces b/w applications/legacy systems should also be well considered, designed and developed"
         [[params.experience.list.items]]
-        details = "DBA:  I  performed  job  role  of  DBA  at  the  project  which  was  to  build  a  Health  Information  System  (HIS).  I  perform  the  job  of  managing  database  ,  data  management  ,  database  migration  (Migrate  from  Oracle  to  IBM  DB2),  data  synchronization."
+        details = "DBA: I performed job role of DBA. The job includes database management, migration(Migrate from Oracle to IBM DB2), data synchronization"
         [[params.experience.list.items]]
-        details = "SA:  Identified  client  requirements  and  designed  the  application  to  meet  those  requirements."
+        details = "SA: Identified requirements and designed the application; lead development team to make it real"
 
         [[params.experience.list]]
         title = "Software Developer"
         dates = "1998 - 2000"
-        company = "IISI"
+        company = "宏詹資訊 IISI"
         details = "developer"
         [[params.experience.list.items]]
-        details = "I  took  full  training  of  Oracle  Database  and  it’s  development  tool  and  a  little  bit  Oracle  ERP  and  got  certified  “Oracle  Certified  Application  Developer  Rel.1”."
+        details = "I took full training of Oracle Database and it’s development tool; Achieved to get certified “Oracle  Certified  Application  Developer  Rel.1”."
         [[params.experience.list.items]]
-        details = "eveloped  Shop  floor  control  system  for  Sanyang  Motor  Company  (SYM)  which  is  for  auto  production  line  for  manufacturing."
-
+        #details = "Developed  Shop  floor  control  system  for  Sanyang  Motor  Company  (SYM)  which  is  for  auto  production  line  for  manufacturing."
+        details = "Developed Shop floor control system for SYM to build automation control system for car manufacturing"
         [[params.experience.list]]
         title = "STAFF"
         dates = "1996 - 1998"
-        company = "Evergreen Int'l Co."
-        details = "I  were  in  charge  for  insurances  for  aviation  including  APA,  LOL,  Aircraft  and  Liabilities.  Coverage  included  insurance  placement,  renewal  and  claim."
-
-       
+        company = "長榮國際"
+        details = "I were in charge for insurances for aviation including APA, LOL, Aircraft and Liabilities. Coverage included insurance placement, renewal and claim"
 
 
     [params.projects]
@@ -242,7 +240,7 @@ googleAnalytics = "UA-XXXXXXX-Y"
 
         [[params.projects.list]]
         #title = "FCB New Enterprise Bank Portal "
-        title = "F Bank New Internet Banking Portal"
+        title = "F Bank New Internet Banking Portal "
         meta = "ITA & SA & SD"
         tagline = "Upgrade and develop new cx portal with new look and feel, multi-lingo capability. Perform HA and Stress test to ensure robustness"
 
