add cka to award

--- a/config_en.toml
+++ b/config_en.toml
@@ -125,6 +125,12 @@ googleAnalytics = "UA-XXXXXXX-Y"
 
     [params.awards]
         enable = true
+        
+        [[params.awards.list]]
+        name = "CKA"
+        body = "Certified Kubernetes Architect"
+        #body = "https://www.credly.com/badges/636bfa4b-7f56-49f9-ae2b-92991e998e5c/public_url"
+        date = "2023/2/15 ~ 2026/2/16"
 
         [[params.awards.list]]
         name = "AWS Certified Solutions Architect - Associate"
