--- a/config.toml
+++ b/config.toml
@@ -126,9 +126,16 @@ googleAnalytics = "UA-XXXXXXX-Y"
     [params.awards]
         enable = true
 
+	[[params.awards.list]]
+        name = "CKA"
+        body = "Certified Kubernetes Architect"
+        #body = "https://www.credly.com/badges/636bfa4b-7f56-49f9-ae2b-92991e998e5c/public_url"
+        date = "2023/2/15 ~ 2026/2/16"
+        
+
         [[params.awards.list]]
-        name = "AWS Certified Solutions Architect - Associate"
-        body = "SAA"
+        name = "SAA"
+        body = "AWS Certified Solutions Architect - Associate"
         date = "2017/10/26 ~ 2020/10/26"
         
         [[params.awards.list]]
