--- a/config.toml
+++ b/config.toml
@@ -136,21 +136,25 @@ googleAnalytics = "UA-XXXXXXX-Y"
 
         [[params.awards.list]]
         name = "SAA"
+        url = ""
         body = "AWS Certified Solutions Architect - Associate"
         date = "2017/10/26 ~ 2020/10/26"
         
         [[params.awards.list]]
         name = "TOEIC"
+        url = ""
         body = "TOEIC Listening and Reading Total Score: 790"
         date = "2016/9/25"
         
         [[params.awards.list]]
         name = "IBM DB2"
+        url = ""
         body = "IBM Certified Database Associate -- DB2 Universal Database V8.1 Family"
         date = "2005"
         
         [[params.awards.list]]
         name = "OCP AD"
+        url = ""
         body = "Oracle Certified Application Developer Rel.1"
         date = "1999"
 
@@ -213,7 +217,6 @@ googleAnalytics = "UA-XXXXXXX-Y"
         
         [[params.experience.list.items]]
         details = "Architect: Design architecture, implement solution that meet FRs, NFRs and interfaces requirements b/w client existing system and new system"
-        
         [[params.experience.list.items]]
         details = "DBA: I performed job role of DBA. The job includes database management, migration(Migrate from Oracle to IBM DB2), data synchronization"
         [[params.experience.list.items]]
