fix url in award error

--- a/config_en.toml
+++ b/config_en.toml
@@ -118,45 +118,40 @@ googleAnalytics = "UA-XXXXXXX-Y"
 
 
 
-
-
-
-
-
     [params.awards]
         enable = true
-        
-        [[params.awards.list]]
+
+    [[params.awards.list]]
         name = "CKA"
+        url = "https://www.credly.com/badges/636bfa4b-7f56-49f9-ae2b-92991e998e5c/public_url"
         body = "Certified Kubernetes Architect"
         #body = "https://www.credly.com/badges/636bfa4b-7f56-49f9-ae2b-92991e998e5c/public_url"
         date = "2023/2/15 ~ 2026/2/15"
+        
 
         [[params.awards.list]]
-        name = "AWS Certified Solutions Architect - Associate"
-        body = "SAA"
+        name = "SAA"
+        url = ""
+        body = "AWS Certified Solutions Architect - Associate"
         date = "2017/10/26 ~ 2020/10/26"
         
         [[params.awards.list]]
         name = "TOEIC"
+        url = ""
         body = "TOEIC Listening and Reading Total Score: 790"
         date = "2016/9/25"
         
         [[params.awards.list]]
         name = "IBM DB2"
+        url = ""
         body = "IBM Certified Database Associate -- DB2 Universal Database V8.1 Family"
         date = "2005"
         
         [[params.awards.list]]
         name = "OCP AD"
+        url = ""
         body = "Oracle Certified Application Developer Rel.1"
         date = "1999"
-
-
-
-
-
-
 
 
     [params.languages]
@@ -212,7 +207,7 @@ googleAnalytics = "UA-XXXXXXX-Y"
         details = "System architect and tech. lead/support engagement SoW/proposal"
         
         [[params.experience.list.items]]
-        details = "Architect: Design architecture with Architecture Thinking, implement solution that meet FRs and NFRs. Interfaces b/w applications/legacy systems should also be well considered, designed and developed"
+        details = "Architect: Design architecture, implement solution that meet FRs, NFRs and interfaces requirements b/w client existing system and new system"
         [[params.experience.list.items]]
         details = "DBA: I performed job role of DBA. The job includes database management, migration(Migrate from Oracle to IBM DB2), data synchronization"
         [[params.experience.list.items]]
