--- a/config_zh_pub.toml
+++ b/config_zh_pub.toml
@@ -139,30 +139,36 @@ googleAnalytics = "UA-XXXXXXX-Y"
 
     [params.awards]
         enable = true
-	
+
 	[[params.awards.list]]
         name = "CKA"
+        url = "https://www.credly.com/badges/636bfa4b-7f56-49f9-ae2b-92991e998e5c/public_url"
         body = "Certified Kubernetes Architect"
         #body = "https://www.credly.com/badges/636bfa4b-7f56-49f9-ae2b-92991e998e5c/public_url"
         date = "2023/2/15 ~ 2026/2/15"
+        
 
         [[params.awards.list]]
-        name = "AWS Certified Solutions Architect - Associate"
-        body = "http://bit.ly/2SoRywM"
-        date = "2017"
+        name = "SAA"
+        url = ""
+        body = "AWS Certified Solutions Architect - Associate"
+        date = "2017/10/26 ~ 2020/10/26"
         
         [[params.awards.list]]
         name = "TOEIC"
+        url = ""
         body = "TOEIC Listening and Reading Total Score: 790"
         date = "2016/9/25"
         
         [[params.awards.list]]
         name = "IBM DB2"
+        url = ""
         body = "IBM Certified Database Associate -- DB2 Universal Database V8.1 Family"
         date = "2005"
         
         [[params.awards.list]]
         name = "OCP AD"
+        url = ""
         body = "Oracle Certified Application Developer Rel.1"
         date = "1999"
 
@@ -228,7 +234,7 @@ googleAnalytics = "UA-XXXXXXX-Y"
         details = "擔任專案系統架構技術主管/協助專案規畫書建議"
         
         [[params.experience.list.items]]
-        details = "Architect: Design architecture with Architecture Thinking, implement solution that meet FRs and NFRs. Interfaces b/w applications/legacy systems should also be well considered, designed and developed"
+        details = "Architect: Design architecture, implement solution that meet FRs, NFRs and interfaces requirements b/w client existing system and new system"
         [[params.experience.list.items]]
         details = "DBA: I performed job role of DBA. The job includes database management, migration(Migrate from Oracle to IBM DB2), data synchronization"
         [[params.experience.list.items]]
