--- a/config.toml
+++ b/config.toml
@@ -224,15 +224,15 @@ googleAnalytics = "UA-XXXXXXX-Y"
         company = "宏詹資訊 IISI"
         details = "程式開發"
         [[params.experience.list.items]]
-        details = "I took full training of Oracle Database and it’s development tool; Achieved to get certified “Oracle  Certified  Application  Developer  Rel.1”."
+        details = "接受 Oracle 資料庫工具的培訓 (Oracle Database, PL/SQL, Developer 2000)"
         [[params.experience.list.items]]
         #details = "Developed  Shop  floor  control  system  for  Sanyang  Motor  Company  (SYM)  which  is  for  auto  production  line  for  manufacturing."
-        details = "Developed Shop floor control system for SYM to build automation control system for car manufacturing"
+        details = "開發三陽汽車的製程管理系統管理汽車製造流程"
         [[params.experience.list]]
-        title = "STAFF"
+        title = "課員"
         dates = "1996 - 1998"
         company = "長榮國際"
-        details = "I were in charge for insurances for aviation including APA, LOL, Aircraft and Liabilities. Coverage included insurance placement, renewal and claim"
+        details = "主要負責航空保險業務(APA, LOL, 機體與責任), 工作內容包括保險安排, 續保與理賠"
 
        
 
