add skill iac python

--- a/config.toml
+++ b/config.toml
@@ -56,11 +56,15 @@ googleAnalytics = "UA-XXXXXXX-Y"
         [[params.skills.list]]
         title = "Language"
         [[params.skills.list.items]]
-        details = "go"
+        details = "go, python"
+        [[params.skills.list]]
+        title = "IaC"
+        [[params.skills.list.items]]
+        details = "Terraform, Ansible"
         [[params.skills.list]]
         title = "Version Control"
         [[params.skills.list.items]]
-        details = "git,svn"
+        details = "git, svn"
 
         [[params.skills.list]]
         title = "Middleware"
